# pix2tex.cpp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  conan_provider.cmake  conandata.yml  nougat.cpp
checkpoints/: get_latest_checkpoint.py
include/: modle.h  ui.h
source/: main.cpp  modle.cpp  nougat.cpp  pix2tex.cpp  ui.cpp
